--- a/web/.htaccess
+++ b/web/.htaccess
@@ -5,7 +5,6 @@ RewriteEngine On
 RewriteCond %{HTTP_HOST} ^(?!www\.)(.+) [NC]
 RewriteRule ^(.*) http://www.%1/$1 [R=301,NE,L]
 
-# routes we don't want to be rewritten.
-# include your custom routes, separated by |
-RewriteCond %{REQUEST_URI} !^/(assets|public)
-RewriteRule ^(.*)$ index.php?url=%{REQUEST_URI} [QSA,L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . index.php [L]
